# icpc-prelim-system

./: README.md  package.json
.github/workflows/: deploy.yml
public/: index.html
src/: App.css  App.tsx  index.tsx
src/components/: progress.css  progress.tsx  section.css  section.tsx  stage.tsx
src/components/problems/: j-en.tsx  j-ja.tsx  k-en.tsx  k-ja.tsx  l-en.tsx  l-ja.tsx  m-en.tsx  m-ja.tsx
src/hooks/: useInterval.ts
src/pages/: contact.tsx  help.tsx  index.css  index.tsx  list.tsx  problem.tsx  result.css  result.tsx  standings.tsx  top.tsx  workplace.tsx  workspace.tsx
src/utils/: data.ts  path.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  problemj.rs  problemk.rs  probleml.rs  problemm.rs
