[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["Asa <26807394+a01sa01to@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/saitamau-maximum/icpc-prelim-system"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
